--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "pug": "^2.0.3"
+    "pug": "^2.0.4"
   },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.6"
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "nodemon": "^1.18.6",
+    "prettier": "^2.0.5"
   }
 }
